# ig_graph_slam

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  README.md  package.xml  results_info.txt
calibrations/: F1.yaml  F2.yaml  F3.json  F3.yaml  X1.yaml  extrinsics_2018_05.json  extrinsics_moose.json
config/: icp1.yaml  ig_graph_slam_config.yaml  view_results_config.rviz
include/ig_graph_slam/: conversions.hpp  gtsam_graph.hpp  kdtreetype.hpp  load_ros_data.hpp  measurementtypes.hpp  pcl_filters.hpp  scan_matcher.hpp  slam_params.hpp  test2.hpp  utils.hpp
launch/: debayer.launch  ig_gs_start.launch  ig_gs_view_results.launch
plotting/: opt_traj1.txt  plotting_poses.m
scripts/: collect_loam_gs_bag.sh  collect_loam_gs_bag_live.sh  install.bash  install_deps.sh  joy_mapping_controller.py  start_graph_slam.sh
src/: conversions.cpp  gtsam_graph.cpp  load_ros_data.cpp  main.cpp  mainTest.cpp  pcl_filters.cpp  scan_matcher.cpp  slam_params.cpp  test2.cpp  world_frame_conversions.cpp
